Gestion bouton % à revoir

--- a/calculator.html
+++ b/calculator.html
@@ -11,9 +11,9 @@
     <title>Calculator</title>
 </head>
 <body>
-    <section class="calculator">
-        <div class="output"></div>
-        <div class="keys">
+    <section id="calculator">
+        <div id="output"></div>
+        <div id="keys">
             <div class="key-op" id="ac">AC</div>
             <div class="key-op" id="minus-m">+ / -</div>
             <div class="key-op" id="percent">%</div>
@@ -24,15 +24,15 @@
             <div class="key-op" id="submit">=</div>
             <div id="comma">,</div>
             <div id="key-0">0</div>
-            <div>7</div>
-            <div>8</div>
-            <div>9</div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
+            <div id="key-7">7</div>
+            <div id="key-8">8</div>
+            <div id="key-9">9</div>
+            <div id="key-4">4</div>
+            <div id="key-5">5</div>
+            <div id="key-6">6</div>
+            <div id="key-1">1</div>
+            <div id="key-2">2</div>
+            <div id="key-3">3</div>
         </div>
     </section>
 </body>
