--- a/calculator.html
+++ b/calculator.html
@@ -35,5 +35,8 @@
             <div id="key-3">3</div>
         </div>
     </section>
+    <section id="dev">
+        
+    </section>
 </body>
 </html>
